--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
 			"web-dir": ".Build/Web"
 		},
 		"branch-alias": {
-			"dev-master": "5.8.x-dev"
+			"dev-master": "5.8.x-dev",
+			"dev-feature/query_aggregation": "6.0.x-dev"
 		}
 	}
 }
